--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2896,7 +2896,7 @@ input, select, textarea {
 
 	.contact-method {
 		margin: 0 0 2em 0;
-		padding-left: 3.25em;
+		/* padding-left: 3.25em; */
 		position: relative;
 	}
 
