--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3472,7 +3472,7 @@ input, select, textarea {
 				}
 
 		#banner.major {
-			height: 75vh;
+			/* height: 75vh; */
 			min-height: 30em;
 			max-height: 50em;
 		}
