--- a/assets/sass/components/_tiles.scss
+++ b/assets/sass/components/_tiles.scss
@@ -19,10 +19,10 @@
 			@include vendor('align-items', 'center');
 			@include vendor('display', 'flex');
 			@include vendor('transition', (
-				'transform 0.25s ease',
-				'opacity 0.25s ease',
-				'filter 1s ease',
-				'-webkit-filter 1s ease'
+				// 'transform 0.25s ease',
+				// 'opacity 0.25s ease',
+				// 'filter 1s ease',
+				// '-webkit-filter 1s ease'
 			));
 			@include padding(4em, 4em);
 			background-position: center;
